--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-progress": "^3.9.0",
     "node-fetch": "^2.6.1",
     "node-html-parser": "^3.1.6"
   }
